# auricle

./: README.md  com.refi64.Auricle.json  com.refi64.Musivid.json  meson.build
build-aux/: win-package.sh
data/: com.refi64.Auricle.appdata.xml.in  com.refi64.Auricle.desktop.in  com.refi64.Auricle.gschema.xml  com.refi64.Musivid.appdata.xml.in  com.refi64.Musivid.desktop.in  com.refi64.Musivid.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: auricle-image-section.c  auricle-image-section.h  auricle-image-section.ui  auricle-music-file.c  auricle-music-file.h  auricle-music-row.c  auricle-music-row.h  auricle-music-row.ui  auricle-music-table.c  auricle-music-table.h  auricle-music-table.ui  auricle-notification.c  auricle-notification.h  auricle-notification.ui  auricle-options-editor.c  auricle-options-editor.h  auricle-options-editor.ui  auricle-progress-row.c  auricle-progress-row.h  auricle-progress-row.ui  auricle-progress-view.c  auricle-progress-view.h  auricle-progress-view.ui  auricle-render-options.c  auricle-render-options.h  auricle-renderer.c  auricle-renderer.h  auricle-utils.c  auricle-utils.h  auricle-window.c  auricle-window.h  auricle-window.ui  auricle.gresource.xml  main.c  meson.build  musivid-image-section.c  musivid-image-section.h  musivid-image-section.ui  musivid-music-file.c  musivid-music-file.h  (+29 more)
